migrate to using natives and poinetrs